examples/test/testpolicy1064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1064
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key30: value9
      key25: value49
      key12: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value38
          key11: value8
          key32: value43
      podSelector:
        matchLabels:
          key37: value39
